# aws-serverless-autopost-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  COST_ESTIMATION.md  CUSTOMIZATION_GUIDE.md  SECURITY.md  SETUP_GUIDE.md
docs/adr/: 001-lambda-orchestrator-pattern.md  002-eventbridge-over-step-functions.md  003-dynamodb-dedup-with-ttl.md  004-pillow-overlay-vs-baked-text.md  005-secrets-manager-over-env-vars.md  006-sqs-dlq-over-lambda-destinations.md
infra/: app.py  cdk.json  requirements.txt
infra/stacks/: autopost_stack.py
lambda/content_generator/: handler.py  prompts.py
lambda/facebook_poster/: facebook_client.py  handler.py
lambda/image_generator/: handler.py  image_prompts.py  overlay.py  requirements.txt  unsplash_client.py
lambda/post_scheduler/: config.py  handler.py
scripts/: generate_sample.py  setup_secrets.sh  test_post_local.py
tests/: conftest.py  test_content_generator.py  test_facebook_poster.py  test_image_generator.py  test_overlay.py  test_post_scheduler.py
